# py-quickstart

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
pkg_name/: main.py
src/: main.py
tests/: test_main.py
