[tool.poetry]
name = "py-quickstart"
version = "0.1.0"
description = ""
authors = ["Lorenzo Pratissoli <lorenzo.pratissoli@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_quickstart"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"
ruff = "^0.0.256"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
